# ChatBox

./: .gitignore  README.md  README1.md
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/client/src/tool_client/: design.rs  mod.rs  qr_code_client.rs
chat/server/: Cargo.toml
chat/server/src/: main.rs  rust.db
chat/server/src/tools/: chiffrement.rs  design.rs  log.rs  mod.rs  sqlcommand.rs
